<resources>
    <string name="app_name">Unmatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_contacts">No contacts</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="signin">SIGN IN</string>
    <string name="signout">SIGN OUT</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">next</string>
    <string name="submit">SUBMIT</string>
    <string name="back"><u>back</u></string>
    <string name="name">Your name</string>
    <string name="last_name">last name</string>
    <string name="birthday">Birthday</string>
    <string name="get_started">GET STARTED</string>
    <string name="phone_number">phone number</string>
    <string name="my_exs">My EX\'S</string>
    <string name="message_description">Select the type of breakup message you would like to send</string>
    <string name="preview_message">Preview breakup message</string>
    <string name="message_sent"><br>YOUR BREAKUP </br><br> MESSAGE WAS</br><br>SENT!</br></string>
    <string name="help"><br>Please select a person to block </br> and send a breakup message too.</string>
    <string name="contact_send">Are you sure you want to send a breakup message to this contact?</string>
    <string name="message_unknown_error">Occurred unknown error. Please try again</string>
    <string name="message_invalid_token">Seems your token expired. Please login again</string>
    <string name="message_server_error">Something went wrong. Please try again</string>
    <string name="message_success_login">You logged in successfully!</string>
    <string name="message_success_register">You registered successfully. Please login now!</string>
    <string name="title_messages">Messages</string>
    <string name="title_settings">Settings</string>
    <string name="message_signout">Are you sure you want to sign out?</string>
    <string name="title_cancel">Cancel</string>
    <string name="error_network">Network unavailable, please check your network.</string>

    <string name="intro_title1">HOW TO USE</string>
    <string name="intro_description1">Click the + icon on the Unmatch home screen to initiate a new breakup message.</string>
    <string name="intro_description2">HOW TO USE</string>
    <string name="Tutorial_2_Content">Select a contact from your phone to send anonymous breakup message.</string>
    <string name="intro_title3">HOW TO USE</string>
    <string name="intro_description3">Accept the prompt to block your ex and send them an anonymous breakup message.</string>
    <string name="intro_title4">HOW TO USE</string>
    <string name="intro_description4">Share your roster of exes with your friends. Don\'t let them make the same mistakes you did.</string>

</resources>