<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="NEW BREAKINGUP MESSAGE"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/type_textview"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/message_description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/preview_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/preview_message"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/message_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/preview_message_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="textMultiLine"
            android:text="show preview message"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/send_message_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="input sending message"
            android:inputType="textMultiLine"
            android:visibility="gone" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/create_button_background"
            android:text="@string/next"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp" />

        <Button
            android:id="@+id/select_contact"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/create_button_background"
            android:text="SELECT CONTACT"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>